[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/Hero.gd" type="Script" id=1]
[ext_resource path="res://sprites/character4.5.png" type="Texture" id=2]
[ext_resource path="res://scenes/weapons/Weapon1.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 44, 17 )

[node name="HeroBody" type="KinematicBody2D"]
z_as_relative = false
script = ExtResource( 1 )

[node name="Weapon1" parent="." instance=ExtResource( 3 )]
position = Vector2( 2, -40 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -91 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -16 )
shape = SubResource( 1 )

[node name="HeroHealth" type="ProgressBar" parent="."]
margin_left = -51.0
margin_right = 52.0
margin_bottom = 14.0
value = 100.0

[node name="OrbOrigin" type="Node2D" parent="."]
position = Vector2( -55, -69 )

[node name="BlueOrbTimer" type="Timer" parent="OrbOrigin"]
unique_name_in_owner = true
wait_time = 1.5

[node name="BlueOrbAttackTimer" type="Timer" parent="OrbOrigin/BlueOrbTimer"]
unique_name_in_owner = true
wait_time = 0.075

[connection signal="timeout" from="OrbOrigin/BlueOrbTimer" to="." method="_on_BlueOrbTimer_timeout"]
[connection signal="timeout" from="OrbOrigin/BlueOrbTimer/BlueOrbAttackTimer" to="." method="_on_BlueOrbAttackTimer_timeout"]
